@@ -1,3 +1,7 @@
+2014-09-29  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Kill pgetc_macro.
+
 2014-09-28  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Correctly handle test ! ! = !.
